--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,6 +69,11 @@
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script th:src="@{/script.js}"></script>
+<script th:src="@{/utils.js}"></script>
+<script th:src="@{/apiClient.js}"></script>
+<script th:src="@{/eventRenderer.js}"></script>
+<script th:src="@{/eventEditor.js}"></script>
+<script th:src="@{/chatHandler.js}"></script>
+
 </body>
 </html>
